jetty/kubernetes/gateway/nomulus-route-backend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
  hostnames:
    - "backend.BASE_URL"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /task
    - path:
        type: PathPrefix
        value: /cron
    - path:
        type: PathPrefix
        value: /admin
    - path:
        type: PathPrefix
        value: /epptool
    - path:
        type: PathPrefix
        value: /loadtest
      backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: backend
      port: 80
