jetty/kubernetes/gateway/nomulus-route-pubapi.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pubapi
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
  hostnames:
    - "pubapi.BASE_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/whois
    - path:
        type: PathPrefix
        value: /check
    - path:
        type: PathPrefix
        value: /whois
    - path:
        type: PathPrefix
        value: /rdap
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: pubapi
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/whois
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /check
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /whois
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /rdap
      headers:
      - name: "canary"
        value: "true"
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: pubapi-canary
      port: 80
